--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<style>
 		body{
-			background-color: #000;
-			text-align: center;
+			margin:20px;
 		}
 	</style>
 </head>
 
 <body>
 
-	<img src="Home.jpg">
+<div class="container">
+
+	<div class="col-sm-6 col-sm-offset-3">
+		<div class="list-group">
+		  <a href="paleta1.html" class="list-group-item">Paleta 1</a>
+		  <a href="paleta2.html" class="list-group-item">Paleta 2</a>
+		  <a href="paleta3.html" class="list-group-item">Paleta 3</a>
+		</div>
+	</div>
+	
+</div>
 
 </body>
 
